crates/test-framework/src/spicetest/text_to_sql/snapshots/test_framework__spicetest__text_to_sql__parse__tests__multiple_joins.snap
---
source: crates/test-framework/src/spicetest/text_to_sql/parse.rs
expression: "format_result(&tables, &projections)"
---
Tables:
  spice.public.table_a
  spice.public.table_b
  spice.public.table_c

Projections:
  spice.public.table_a.id
  spice.public.table_b.name
  spice.public.table_c.value
