crates/test-framework/src/spicetest/text_to_sql/snapshots/test_framework__spicetest__text_to_sql__parse__tests__quoted_identifiers.snap
---
source: crates/test-framework/src/spicetest/text_to_sql/parse.rs
expression: "format_result(&tables, &projections)"
---
Tables:
  spice.public.spice.public.frpm

Projections:
  spice.public.spice.public.frpm.Enrollment (K-12)
  spice.public.spice.public.frpm.Free Meal Count (K-12)
